# VideoSplitter

./: .architecture-skip  .code-walkthrough-result.json  .coverage  .gitignore  AGENTS.md  CHANGELOG.md  COMPLETION_REPORT.md  OPENCODE_SETUP.md  PROJECT_SUMMARY.md  README.md  acceptance-checklist.md  architecture.yaml  install.bat  install.sh  launch-gui.bat  package.json  pyproject.toml  requirements.txt  skill.md  streaming-asr-completion-report.canvas.tsx
.github/workflows/: test.yml
.omo/run-continuation/: ses_09f23c596ffeRxXlqhZ0Vt822a.json  ses_09f265628ffeqZ8KUSUM1lfYAc.json  (+23 more)
.sprint-state/: sprint-state.json
docs/: funasr-migration-design.md
ffmpeg-skill/: AGENTS.md  __init__.py  examples.py  ffmpeg_tool.py  tests.py
ffmpeg-video-workspace/: convert_webm.py  evals.json  fix_grading.py  grade_all.py
gui/: AGENTS.md  app.py
skill-cert-results/: SKILL-evals-cache.json  SKILL-result.json
tests/: conftest.py  test_e2e.py  test_e2e_cli.py  test_e2e_edge_cases.py  test_e2e_review.py  test_gui_integration.py  test_gui_signal_wiring.py  test_hotwords.py  test_integration.py  test_main_window.py  test_model_loader_integration.py  test_model_loader_worker.py  test_review_controller.py  test_split_controller.py  test_split_widgets.py  test_streaming_integration.py  test_streaming_worker.py  test_subtitle_burn.py  test_transcribe_funasr.py  test_video_first_frame.py  test_widgets.py  test_workers.py
video-splitter/: __init__.py  cli.py  config.py
video_splitter/: AGENTS.md  __init__.py  cli.py  config.py  pipeline.py  review.py  split.bat  vsplit.bat
(+243 files in other folders)
