[project]
name = "video_splitter"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests", "video_splitter/tests"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external dependencies (FFmpeg, LLM API)",
]

[tool.coverage.run]
source = ["video_splitter", "gui"]
omit = ["*/tests/*", "*/test_*.py", "ffmpeg-skill/tests.py"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]
"video_splitter/tests/**/*.py" = ["E402"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
